--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Blaize Kenny <nav></header>
+    <header>  <h1>Blaize Kenny</h1> <nav>
+        <ul>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<footer>
     
+</footer>
 </body>
 </html>
