--- a/index.html
+++ b/index.html
@@ -7,16 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>  <h1>Blaize Kenny</h1> <nav>
-        <ul>
-            <li><a href="#about-me">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-<footer>
-    
-</footer>
+    <header>  
+        <h1>Blaize Kenny</h1>
+        <nav>
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>  
+        <section id="about-me">
+            <h2>About Me</h2>
+            <p>Hello! My name is Blaize Kenny. I am a web developer with a passion for creating beautiful and functional websites. In my free time, I enjoy hiking, photography, and learning new programming languages.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Portfolio Website:</strong> A personal website showcasing my projects and skills.</li>
+                <li><strong>Blog Platform:</strong> A simple blogging platform built with HTML, CSS, and JavaScript.</li>
+                <li><strong>E-commerce Site:</strong> An online store prototype with product listings and a shopping cart feature.</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:blaizekenny@example.com">blaizekenny@example.com</a>.</p>
+        </section>
+    </main>
+    <footer>
+        <p>© 2025 MyWebsite. All rights reserved.</p>
+    </footer>    
 </body>
 </html>
