color scheme, hover attributes, end of session

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>Blaize Kenny</h1>
         <nav>
             <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="nav"><a href="#about-me">About Me</a></li>
+                <li class="nav"><a href="#projects">Projects</a></li>
+                <li class="nav"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
             <h2>Projects</h2>
             <ul>
                 <li><strong>Blog Platform:</strong> A simple blogging platform built with HTML, CSS, and JavaScript.</li>
-                <li><strong>E-commerce Site:</strong> An online store prototype with product listings and a shopping cart feature.</li>
+                <li><strong>Portfolio Website:</strong> A personal portfolio website showcasing my projects and skills.</li>
             </ul>
         </section>
         <section id="contact-details">
